# incidents-task

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_19_1054-dc818d614a02_init.py
docker/: api.Dockerfile  tests.Dockerfile
docker/scripts/: downgrade.sh  migrate.sh  tests.sh
docs/: incidents.postman_collection.json  task.md
envs/: docker.incidents.env.example  local.incidents.env.example  postgres.env.example
requirements/: requirements.tests.txt  requirements.txt
scripts/: downgrade.sh  export_env.sh  format.sh  gen_requirements.sh  gen_tests_requirements.sh  lint.sh  makemigrations.sh
src/: main.py  routes.py
src/config/: flask.py  settings.py  setup.py
src/incidents/: routers.py
src/incidents/actions/: __init__.py  incident.py
src/incidents/models/: __init__.py  incident.py
src/incidents/repositories/: incident.py
src/incidents/responses/: find.py  incident.py  problems.py
src/incidents/routes/: find.py  problems.py
src/incidents/schemas/: find.py
src/incidents/services/: find.py  problems.py
src/utils/: parsers.py  responses.py
tests/: conftest.py
tests/unit/: test_serivces.py
